--- a/public/css/app.css
+++ b/public/css/app.css
@@ -665,11 +665,20 @@ body{
 .-ml-px{
   margin-left: -1px;
 }
+.mt-7{
+  margin-top: 1.75rem;
+}
+.\!mt-0{
+  margin-top: 0px !important;
+}
 .block{
   display: block;
 }
 .inline-block{
   display: inline-block;
+}
+.inline{
+  display: inline;
 }
 .flex{
   display: flex;
@@ -725,17 +734,11 @@ body{
 .h-1{
   height: 0.25rem;
 }
-.h-\[446px\]{
-  height: 446px;
-}
 .h-auto{
   height: auto;
 }
 .h-\[300px\]{
   height: 300px;
-}
-.h-\[518px\]{
-  height: 518px;
 }
 .max-h-\[518px\]{
   max-height: 518px;
@@ -979,9 +982,6 @@ body{
 .self-start{
   align-self: flex-start;
 }
-.overflow-auto{
-  overflow: auto;
-}
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1216,6 +1216,10 @@ body{
 }
 .bg-indigo-900\/90{
   background-color: rgb(49 46 129 / 0.9);
+}
+.bg-yellow-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
@@ -1559,9 +1563,25 @@ body{
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity));
 }
+.text-yellow-800{
+  --tw-text-opacity: 1;
+  color: rgb(133 77 14 / var(--tw-text-opacity));
+}
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+.text-rose-500{
+  --tw-text-opacity: 1;
+  color: rgb(244 63 94 / var(--tw-text-opacity));
+}
 .text-rose-600{
   --tw-text-opacity: 1;
   color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+.text-green-600{
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 .placeholder-red-700::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -1975,6 +1995,11 @@ body{
   --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
 }
 
+.focus\:ring-gray-200:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
+}
+
 .active\:translate-y-\[0\.125rem\]:active{
   --tw-translate-y: 0.125rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2055,6 +2080,10 @@ body{
     --tw-bg-opacity: 1;
     background-color: rgb(30 58 138 / var(--tw-bg-opacity));
   }
+  .dark\:bg-yellow-900{
+    --tw-bg-opacity: 1;
+    background-color: rgb(113 63 18 / var(--tw-bg-opacity));
+  }
   .dark\:text-green-900{
     --tw-text-opacity: 1;
     color: rgb(20 83 45 / var(--tw-text-opacity));
@@ -2082,6 +2111,10 @@ body{
   .dark\:text-blue-300{
     --tw-text-opacity: 1;
     color: rgb(147 197 253 / var(--tw-text-opacity));
+  }
+  .dark\:text-yellow-300{
+    --tw-text-opacity: 1;
+    color: rgb(253 224 71 / var(--tw-text-opacity));
   }
   .dark\:placeholder-gray-400::-moz-placeholder{
     --tw-placeholder-opacity: 1;
@@ -2129,6 +2162,12 @@ body{
   }
 }
 
+@media print{
+  .print\:hidden{
+    display: none;
+  }
+}
+
 @media (min-width: 640px){
   .sm\:col-span-6{
     grid-column: span 6 / span 6;
@@ -2166,8 +2205,14 @@ body{
   .sm\:w-16{
     width: 4rem;
   }
+  .sm\:w-auto{
+    width: auto;
+  }
   .sm\:flex-1{
     flex: 1 1 0%;
+  }
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .sm\:flex-row{
     flex-direction: row;
@@ -2213,6 +2258,9 @@ body{
   }
   .md\:col-span-6{
     grid-column: span 6 / span 6;
+  }
+  .md\:col-span-4{
+    grid-column: span 4 / span 4;
   }
   .md\:ml-0{
     margin-left: 0px;
@@ -2269,6 +2317,9 @@ body{
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
   }
+  .lg\:col-span-4{
+    grid-column: span 4 / span 4;
+  }
   .lg\:max-w-3xl{
     max-width: 48rem;
   }
@@ -2289,6 +2340,9 @@ body{
   }
   .xl\:w-1\/4{
     width: 25%;
+  }
+  .xl\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .xl\:gap-y-0{
     row-gap: 0px;
