--- a/public/css/app.css
+++ b/public/css/app.css
@@ -524,14 +524,14 @@ body{
 .z-30{
   z-index: 30;
 }
+.z-40{
+  z-index: 40;
+}
 .z-50{
   z-index: 50;
 }
 .z-0{
   z-index: 0;
-}
-.z-40{
-  z-index: 40;
 }
 .col-span-12{
   grid-column: span 12 / span 12;
@@ -840,16 +840,6 @@ body{
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.scale-75{
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.scale-90{
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1012,6 +1002,9 @@ body{
 .overflow-x-hidden{
   overflow-x: hidden;
 }
+.overflow-y-hidden{
+  overflow-y: hidden;
+}
 .truncate{
   overflow: hidden;
   text-overflow: ellipsis;
@@ -1063,6 +1056,10 @@ body{
 .border-2{
   border-width: 2px;
 }
+.border-y{
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+}
 .border-b-4{
   border-bottom-width: 4px;
 }
@@ -1077,6 +1074,9 @@ body{
 }
 .border-t{
   border-top-width: 1px;
+}
+.border-b-2{
+  border-bottom-width: 2px;
 }
 .border-solid{
   border-style: solid;
@@ -1147,10 +1147,6 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(255 81 82 / var(--tw-bg-opacity));
 }
-.bg-slate-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1161,6 +1157,10 @@ body{
 .bg-slate-500{
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+.bg-slate-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 .bg-rose-500{
   --tw-bg-opacity: 1;
@@ -1238,11 +1238,11 @@ body{
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
 }
-.bg-opacity-100{
-  --tw-bg-opacity: 1;
-}
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
+}
+.bg-opacity-100{
+  --tw-bg-opacity: 1;
 }
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
@@ -1376,6 +1376,10 @@ body{
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
+.px-\[12px\]{
+  padding-left: 12px;
+  padding-right: 12px;
+}
 .py-1\.5{
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
@@ -1383,10 +1387,6 @@ body{
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-.px-\[12px\]{
-  padding-left: 12px;
-  padding-right: 12px;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -2256,9 +2256,6 @@ body{
   .sm\:text-right{
     text-align: right;
   }
-  .sm\:duration-700{
-    transition-duration: 700ms;
-  }
 }
 
 @media (min-width: 768px){
@@ -2328,11 +2325,11 @@ body{
   .lg\:col-span-6{
     grid-column: span 6 / span 6;
   }
-  .lg\:col-span-3{
-    grid-column: span 3 / span 3;
-  }
   .lg\:col-span-4{
     grid-column: span 4 / span 4;
+  }
+  .lg\:col-span-3{
+    grid-column: span 3 / span 3;
   }
   .lg\:hidden{
     display: none;
@@ -2352,11 +2349,11 @@ body{
   .xl\:col-span-5{
     grid-column: span 5 / span 5;
   }
-  .xl\:col-span-2{
-    grid-column: span 2 / span 2;
-  }
   .xl\:col-span-3{
     grid-column: span 3 / span 3;
+  }
+  .xl\:col-span-2{
+    grid-column: span 2 / span 2;
   }
   .xl\:gap-y-0{
     row-gap: 0px;
