--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1289,6 +1289,14 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
+.bg-slate-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+.bg-yellow-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 98 7 / var(--tw-bg-opacity));
+}
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
 }
@@ -1325,6 +1333,9 @@ body{
 }
 .fill-current{
   fill: currentColor;
+}
+.fill-white{
+  fill: #fff;
 }
 .stroke-current{
   stroke: currentColor;
@@ -1680,6 +1691,10 @@ body{
 .text-sky-600{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+.text-yellow-700{
+  --tw-text-opacity: 1;
+  color: rgb(161 98 7 / var(--tw-text-opacity));
 }
 .placeholder-red-700::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -2149,6 +2164,11 @@ body{
 .group:hover .group-hover\:text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-blue-700{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:opacity-100{
