--- a/public/css/app.css
+++ b/public/css/app.css
@@ -931,6 +931,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-4 {
   left: 1rem;
 } 
+.top-1 {
+  top: 0.25rem;
+} 
+.left-1 {
+  left: 0.25rem;
+} 
 .z-30 {
   z-index: 30;
 } 
@@ -955,11 +961,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .col-span-2 {
   grid-column: span 2 / span 2;
 } 
-.col-span-8 {
-  grid-column: span 8 / span 8;
-} 
 .col-span-1 {
   grid-column: span 1 / span 1;
+} 
+.col-span-8 {
+  grid-column: span 8 / span 8;
 } 
 .m-auto {
   margin: auto;
@@ -1059,6 +1065,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 } 
 .mb-1 {
   margin-bottom: 0.25rem;
+} 
+.mt-7 {
+  margin-top: 1.75rem;
 } 
 .ml-14 {
   margin-left: 3.5rem;
@@ -1478,6 +1487,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
 } 
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+} 
 .border {
   border-width: 1px;
 } 
@@ -1633,6 +1646,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-\[\#ffffff3d\] {
   background-color: #ffffff3d;
 } 
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+} 
 .bg-slate-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -1664,10 +1681,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-gray-900\/40 {
   background-color: rgb(17 24 39 / 0.4);
 } 
-.bg-blue-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-} 
 .bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
@@ -1682,6 +1695,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-neutral-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+} 
+.bg-\[\#1da1f2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 161 242 / var(--tw-bg-opacity));
 } 
 .bg-opacity-90 {
   --tw-bg-opacity: 0.9;
@@ -1720,6 +1737,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .fill-current {
   fill: currentColor;
 } 
+.fill-green-600 {
+  fill: #16a34a;
+} 
+.fill-red-600 {
+  fill: #dc2626;
+} 
 .stroke-current {
   stroke: currentColor;
 } 
@@ -1733,14 +1756,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-2 {
   padding: 0.5rem;
 } 
+.p-2\.5 {
+  padding: 0.625rem;
+} 
 .p-3 {
   padding: 0.75rem;
 } 
 .p-4 {
   padding: 1rem;
-} 
-.p-2\.5 {
-  padding: 0.625rem;
 } 
 .p-0 {
   padding: 0px;
@@ -1807,6 +1830,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 } 
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+} 
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1822,10 +1849,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-} 
-.py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
 } 
 .px-\[12px\] {
   padding-left: 12px;
@@ -2061,6 +2084,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
+} 
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
 } 
 .placeholder-red-700::-moz-placeholder {
   --tw-placeholder-opacity: 1;
@@ -2414,6 +2441,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 } 
+.hover\:bg-blue-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+} 
 .hover\:bg-blue-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
@@ -2421,10 +2452,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-} 
-.hover\:bg-blue-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 } 
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
@@ -2462,6 +2489,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:opacity-40:hover {
   opacity: 0.4;
 } 
+.hover\:opacity-60:hover {
+  opacity: 0.6;
+} 
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2470,13 +2500,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .focus\:z-10:focus {
   z-index: 10;
 } 
-.focus\:border-red-500:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-} 
 .focus\:border-blue-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
+} 
+.focus\:border-red-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 } 
 .focus\:border-blue-600:focus {
   --tw-border-opacity: 1;
@@ -2520,10 +2550,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 } 
-.focus\:ring-red-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
-} 
 .focus\:ring-blue-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
@@ -2535,6 +2561,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
+} 
+.focus\:ring-red-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 } 
 .active\:translate-y-\[0\.125rem\]:active {
   --tw-translate-y: 0.125rem;
@@ -2577,11 +2607,23 @@ Ensure the default browser behavior of the `hidden` attribute.
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 } 
+.peer:checked ~ .peer-checked\:border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+} 
+.peer:checked ~ .peer-checked\:opacity-100 {
+  opacity: 1;
+} 
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-600 {
     --tw-border-opacity: 1;
     border-color: rgb(75 85 99 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-gray-500 {
+    --tw-border-opacity: 1;
+    border-color: rgb(107 114 128 / var(--tw-border-opacity));
   }
 
   .dark\:bg-green-200 {
@@ -2607,6 +2649,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .dark\:bg-yellow-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(113 63 18 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
   }
 
   .dark\:bg-opacity-80 {
@@ -2696,6 +2743,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity));
   }
+
+  .dark\:focus\:ring-blue-800:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
+  }
+
+  .dark\:focus\:ring-gray-600:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
+  }
 } 
 @media (min-width: 640px) {
 
@@ -2735,8 +2792,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 11rem;
   }
 
+  .sm\:w-auto {
+    width: auto;
+  }
+
   .sm\:flex-1 {
     flex: 1 1 0%;
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
@@ -2869,12 +2934,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-column: span 4 / span 4;
   }
 
-  .lg\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
+  }
+
+  .lg\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
   .lg\:hidden {
@@ -2909,6 +2974,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .xl\:col-span-2 {
     grid-column: span 2 / span 2;
+  }
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .xl\:gap-y-0 {
